--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.v2.js"></script>
 </head>
 <body>
     <div class="container">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" onclick="addNote()">Add</button>
+                    <button type="button" class="btn btn-primary" onclick="NotesSystem.addNote()" data-dismiss="modal">Add</button>
                 </div>
             </div>
         </div>
