--- a/app/login.html
+++ b/app/login.html
@@ -9,32 +9,82 @@
     <link rel="stylesheet" href="css/libs.min.css"/>
     <link rel="stylesheet" href="css/main.min.css"/>
     <script src="js/libs.min.js"> </script>
-    <script src="js/common.js"></script>
+    <script src="js/slider.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div style="display: none" class="wrapper topmenu">
-        <p class="topmenuTitle">Pendella</p>
-        <div class="wrapper topmenuRight"> <a class="pnBtn">Login</a><a class="pnBtn">Register</a></div>
+    <header>
+      <div class="logo"><img src="img/logo.png" alt="logo"/></div>
+      <div class="container">
+        <div class="wrapper">
+          <div class="smalllogo"><img src="img/logo.png" alt="logo"/></div>
+          <div class="menu">
+            <button id="signin">SIGN IN</button>
+            <button id="signup">SIGN UP</button>
+          </div>
+        </div>
       </div>
-      <div class="wrapper contentLogin">
-        <div class="loginLogo"><img src="/img/logo.png" alt="Pendella"/></div>
-        <div class="panelLogin pnPanel">
-          <div class="wrapper loginForm">
-            <div class="wrapper loginFormField">
-              <label for="">Email:</label>
-              <input type="text" class="pnInput"/>
+    </header>
+    <div class="slider">
+      <div class="slides">
+        <div class="slide active">
+          <div class="wrapper">
+            <div style="background-image: url(img/slides/1.png)" class="slideContent">
+              <div class="wrapper">
+                <h2 style="color: #d79922">STORE YOUR NOTES ONLINE</h2>
+                <p style="color: #d79922">FIREBASE DATABASE PROVIDES ACCESS TO YOUR DATA ANYTIME</p>
+              </div>
             </div>
-            <div class="wrapper loginFormField">
-              <label for="">Password:</label>
-              <input type="password" class="pnInput"/>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="wrapper">
+            <div style="background-image: url(img/slides/2.png)" class="slideContent">
+              <div class="wrapper">
+                <h2 style="color: #f13c1f">EDIT NOTES EVERYWHERE</h2>
+                <p style="color: #f13c1f">NOTEBOOK IS USABLE FROM ANY DEVICE AND SMARTPHONE</p>
+              </div>
             </div>
-            <div class="wrapper loginFormBtn">
-              <button class="pnBtn">Login</button>
+          </div>
+        </div>
+        <div class="slide">
+          <div class="wrapper">
+            <div style="background-image: url(img/slides/3.png)" class="slideContent">
+              <div class="wrapper">
+                <h2 style="color: #4056a1">SIGN IN WITH GOOGLE</h2>
+                <p style="color: #4056a1">USE YOUR GOOGLE ACCOUNT TO SIGN IN AND USE NOTEBOOK</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="controls">
+        <button id="prev"><img src="img/prev.png" alt="prev"/></button>
+        <div class="container wrapper">
+          <div id="indicators"></div>
+        </div>
+        <button id="next"><img src="img/next.png" alt="next"/></button>
+      </div>
     </div>
+    <!--.container-->
+    <!--	.wrapper.topmenu(style="display: none")-->
+    <!--		p.topmenuTitle Pendella-->
+    <!---->
+    <!--		.wrapper.topmenuRight-->
+    <!--			a.pnBtn Login-->
+    <!--			a.pnBtn Register-->
+    <!---->
+    <!--	.wrapper.contentLogin-->
+    <!--		.loginLogo-->
+    <!--			img(src="/img/logo.png", alt="Pendella")-->
+    <!--		.panelLogin.pnPanel-->
+    <!--			.wrapper.loginForm-->
+    <!--				.wrapper.loginFormField-->
+    <!--					label(for="") Email:-->
+    <!--					input(type="text").pnInput-->
+    <!--				.wrapper.loginFormField-->
+    <!--					label(for="") Password:-->
+    <!--					input(type="password").pnInput-->
+    <!--				.wrapper.loginFormBtn-->
+    <!--					button.pnBtn Login-->
   </body>
 </html>
