--- a/app/index.html
+++ b/app/index.html
@@ -15,36 +15,48 @@
   </head>
   <body>
     <header>
+      <div class="logo"><img src="img/logo.png" alt="logo"/></div>
       <div class="container">
         <div class="wrapper">
-          <div class="title"><img src="img/logo.png" alt="logo"/></div>
-          <button>CREATE NEW NOTE</button>
+          <div class="smalllogo"><img src="img/logo.png" alt="logo"/></div>
+          <div class="menu">
+            <button id="newNote">NEW NOTE</button>
+            <button id="signOut">SIGN OUT</button>
+          </div>
         </div>
       </div>
     </header>
     <main>
       <div class="container">
         <div class="wrapper">
-          <div class="userInfo wrapper"><img src="img/user.png" alt="user photo"/>
-            <p class="userName">Alex Hlukhyi</p>
-            <p class="userEmail">o.hlukhyi@gmail.com</p>
-            <button>Logout</button>
-          </div>
-          <div class="data wrapper">
-            <div class="date">
-              <p>01.04.2020</p>
-              <div class="notes wrapper">
-                <div class="note"></div>
-                <div class="note"></div>
-                <div class="note"></div>
-                <div class="note"></div>
-                <div class="note"></div>
-              </div>
+          <div class="userInfo">
+            <div class="wrapper"><img src="img/user.png" alt="user photo"/>
+              <p class="userName">Alex Hlukhyi</p>
+              <p class="userEmail">o.hlukhyi@gmail.com</p>
             </div>
-            <div class="date">
-              <p>02.04.2020</p>
-              <div class="notes wrapper">
-                <div class="note"></div>
+          </div>
+          <div class="data">
+            <div class="wrapper">
+              <div class="date">
+                <p>01.04.2020</p>
+                <div class="notes">
+                  <div class="wrapper">
+                    <div class="note"></div>
+                    <div class="note"></div>
+                    <div class="note"></div>
+                    <div class="note"></div>
+                    <div class="note"></div>
+                    <div class="note"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="date">
+                <p>02.04.2020</p>
+                <div class="notes">
+                  <div class="wrapper">
+                    <div class="note"></div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
