--- a/app/login.html
+++ b/app/login.html
@@ -4,87 +4,55 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Document</title>
+    <title>Login | NoteBook ©</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
     <link rel="stylesheet" href="css/libs.min.css"/>
     <link rel="stylesheet" href="css/main.min.css"/>
     <script src="js/libs.min.js"> </script>
-    <script src="js/slider.js"></script>
+    <!--script(src="js/slider.js")-->
   </head>
   <body>
     <header>
       <div class="logo"><img src="img/logo.png" alt="logo"/></div>
       <div class="container">
-        <div class="wrapper">
-          <div class="smalllogo"><img src="img/logo.png" alt="logo"/></div>
-          <div class="menu">
-            <button id="signin">SIGN IN</button>
-            <button id="signup">SIGN UP</button>
-          </div>
+        <div class="top-bar">
+          <button id="show-menu"><i class="fas fa-bars"></i></button><img src="img/logo.png" alt="logo"/>
         </div>
+        <div class="menu"><a id="sign-in">SIGN IN</a><a id="sign-up">SIGN UP</a></div>
       </div>
     </header>
-    <div class="slider">
-      <div class="slides">
-        <div class="slide active">
-          <div class="wrapper">
-            <div style="background-image: url(img/slides/1.png)" class="slideContent">
-              <div class="wrapper">
-                <h2 style="color: #d79922">STORE YOUR NOTES ONLINE</h2>
-                <p style="color: #d79922">FIREBASE DATABASE PROVIDES ACCESS TO YOUR DATA ANYTIME</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide">
-          <div class="wrapper">
-            <div style="background-image: url(img/slides/2.png)" class="slideContent">
-              <div class="wrapper">
-                <h2 style="color: #f13c1f">EDIT NOTES EVERYWHERE</h2>
-                <p style="color: #f13c1f">NOTEBOOK IS USABLE FROM ANY DEVICE AND SMARTPHONE</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="slide">
-          <div class="wrapper">
-            <div style="background-image: url(img/slides/3.png)" class="slideContent">
-              <div class="wrapper">
-                <h2 style="color: #4056a1">SIGN IN WITH GOOGLE</h2>
-                <p style="color: #4056a1">USE YOUR GOOGLE ACCOUNT TO SIGN IN AND USE NOTEBOOK</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="controls">
-        <button id="prev"><img src="img/prev.png" alt="prev"/></button>
-        <div class="container wrapper">
-          <div id="indicators"></div>
-        </div>
-        <button id="next"><img src="img/next.png" alt="next"/></button>
-      </div>
-    </div>
-    <!--.container-->
-    <!--	.wrapper.topmenu(style="display: none")-->
-    <!--		p.topmenuTitle Pendella-->
-    <!---->
-    <!--		.wrapper.topmenuRight-->
-    <!--			a.pnBtn Login-->
-    <!--			a.pnBtn Register-->
-    <!---->
-    <!--	.wrapper.contentLogin-->
-    <!--		.loginLogo-->
-    <!--			img(src="/img/logo.png", alt="Pendella")-->
-    <!--		.panelLogin.pnPanel-->
-    <!--			.wrapper.loginForm-->
-    <!--				.wrapper.loginFormField-->
-    <!--					label(for="") Email:-->
-    <!--					input(type="text").pnInput-->
-    <!--				.wrapper.loginFormField-->
-    <!--					label(for="") Password:-->
-    <!--					input(type="password").pnInput-->
-    <!--				.wrapper.loginFormBtn-->
-    <!--					button.pnBtn Login-->
+    <main>
+      <container></container>
+    </main>
+    <!--.slider-->
+    <!--	#slides-->
+    <!--		.slide(style="background-color: red").active-->
+    <!--			//.slideContent(style="background-image: url(img/slides/1.png)")-->
+    <!--			//	.wrapper-->
+    <!--			//		h2(style="color: #d79922")-->
+    <!--			//			| STORE YOUR NOTES ONLINE-->
+    <!--			//		p(style="color: #d79922")-->
+    <!--			//			| FIREBASE DATABASE PROVIDES ACCESS TO YOUR DATA ANYTIME-->
+    <!--		.slide(style="background-color: green")-->
+    <!--			//.slideContent(style="background-image: url(img/slides/2.png)")-->
+    <!--			//	.wrapper-->
+    <!--			//		h2(style="color: #f13c1f")-->
+    <!--			//			| EDIT NOTES EVERYWHERE-->
+    <!--			//		p(style="color: #f13c1f")-->
+    <!--			//			| NOTEBOOK IS USABLE FROM ANY DEVICE AND SMARTPHONE-->
+    <!--		.slide(style="background-color: blue")-->
+    <!--			//.slideContent(style="background-image: url(img/slides/3.png)")-->
+    <!--			//	.wrapper-->
+    <!--			//		h2(style="color: #4056a1")-->
+    <!--			//			| SIGN IN WITH GOOGLE-->
+    <!--			//		p(style="color: #4056a1")-->
+    <!--			//			| USE YOUR GOOGLE ACCOUNT TO SIGN IN AND USE NOTEBOOK-->
+    <!--	.controls-->
+    <!--		button#prev-->
+    <!--			img(src="img/prev.png" alt="prev")-->
+    <!--		.container.wrapper-->
+    <!--			#indicators-->
+    <!--		button#next-->
+    <!--			img(src="img/next.png" alt="next")-->
   </body>
 </html>
