--- a/app/index.html
+++ b/app/index.html
@@ -11,43 +11,116 @@
     <link rel="stylesheet" href="css/main.min.css"/>
     <script src="js/libs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <!--script(src="js/common.js")-->
+    <script src="js/common.js"></script>
   </head>
   <body>
     <header>
       <div class="logo"><img src="img/logo.png" alt="logo"/></div>
       <div class="container">
         <div class="top-bar">
-          <button id="show-user-info"><i class="fas fa-bars"></i></button><img src="img/logo.png" alt="logo"/>
+          <button id="show-side-bar" onclick="showSideBar();"><i class="fas fa-bars"></i></button><img src="img/logo.png" alt="logo"/>
         </div>
         <button id="new-note">CREATE NEW NOTE</button>
       </div>
     </header>
     <main>
       <div class="container">
-        <div class="user-info"><img src="img/user.png" alt="user photo"/>
-          <p class="userName">Alex Hlukhyi</p>
-          <p class="userEmail">o.hlukhyi@gmail.com</p>
+        <div id="side-bar">
+          <div class="user-info"><img src="img/user.png" alt="user photo"/>
+            <p id="user-name">Alex Hlukhyi</p>
+            <p id="user-email">o.hlukhyi@gmail.com</p>
+          </div>
+          <button id="sign-out">SIGN OUT</button>
         </div>
         <div class="data">
           <div class="date">
-            <p>01.04.2020</p>
+            <p>03.04.2020</p>
             <div class="notes">
-              <div class="note"></div>
-              <div class="note"></div>
-              <div class="note"></div>
-              <div class="note"></div>
-              <div class="note"></div>
+              <div class="note">
+                <div class="note-head">
+                  <p>Note 1</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cupiditate dolor, ea esse ex molestiae.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
+              <div class="note">
+                <div class="note-head">
+                  <p>Note 2</p>
+                </div>
+                <p>Cumque ducimus, ea incidunt laboriosam modi odio pariatur quas temporibus voluptas? Asperiores at eligendi eos eum labore quae ratione ullam voluptate voluptatem.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
+              <div class="note">
+                <div class="note-head">
+                  <p>Note 3</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cupiditate dolor, ea esse ex molestiae.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
+              <div class="note">
+                <div class="note-head">
+                  <p>Note 4</p>
+                </div>
+                <p>Asperiores at eligendi eos eum labore quae ratione ullam voluptate voluptatem.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="date">
             <p>02.04.2020</p>
             <div class="notes">
-              <div class="note"></div>
+              <div class="note">
+                <div class="note-head">
+                  <p>Note 1 abc</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cupiditate dolor, ea esse ex molestiae.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
+              <div class="note">
+                <div class="note-head">
+                  <p>Note 2 asd</p>
+                </div>
+                <p>Asperiores at eligendi eos eum labore quae ratione ullam voluptate voluptatem.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="date">
+            <p>01.04.2020</p>
+            <div class="notes">
+              <div class="note">
+                <div class="note-head">
+                  <p>Note</p>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="note-controls">
+                  <button class="edit-note">Edit</button>
+                  <button class="delete-note">Delete</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <div id="overlay" onclick="closeSideBar();"></div>
   </body>
 </html>
