--- a/app/login.html
+++ b/app/login.html
@@ -6,22 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Login | NoteBook ©</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"/>
-    <link rel="stylesheet" href="css/libs.min.css"/>
+    <!--link(rel="stylesheet", href="css/libs.min.css")-->
     <link rel="stylesheet" href="css/main.min.css"/>
-    <script src="js/libs.min.js"></script>
+    <script src="js/common.js"></script>
+    <!--script(src="js/libs.min.js")-->
   </head>
   <body>
     <header>
       <div class="logo"><img src="img/logo.png" alt="logo"/></div>
       <div class="container">
         <div class="top-bar">
-          <button id="show-menu"><i class="fas fa-bars"></i></button><img src="img/logo.png" alt="logo"/>
+          <button data-modal="auth-menu" class="modal-button"><i class="fas fa-bars"></i></button><img src="img/logo.png" alt="logo"/>
         </div>
-        <div class="menu"><a id="sign-in">SIGN IN</a><a id="sign-up">SIGN UP</a></div>
+        <div class="menu"><a>SIGN IN</a><a>SIGN UP</a></div>
       </div>
     </header>
     <main>
       <container></container>
     </main>
+    <div class="overlay"></div>
+    <div data-modal="auth-menu" class="modal">HELLO BRUH</div>
   </body>
 </html>
